  by David Gálvez. (VRI)
- bdos/fsdir.c include/gemerror.h: Allow Frename() to rename folders. (RFB)

2013-03-13
- bdos/fsdir.c: Removed non-TOS extension to Dsetpath(). (RFB)
- aes/gemshlib.c: Small code optimisation. (RFB)
- aes/gemqueue.c aes/gemwmlib.c desk/deskapp.c desk/deskfpd.c
  desk/deskins.c desk/deskobj.c desk/deskwin.c include/compat.h: Replace
  movs() macro with memcpy(). (RFB)
- aes/optimize.c aes/optimize.h desk/deskinf.c: Eliminate inf_fldset()
  function to save space & clarify code. (RFB)

2013-03-14
- desk/deskinf.c: Code cleanup: save some stack & code space. (RFB)
- desk/deskmain.c desk/deskstart.S include/config.h: Added
  CONF_DEBUG_DESK_STACK to debug and estimate desktop stack usage. (RFB)
- desk/deskinf.c: Code cleanup: eliminate compatibility macros, replace
  some globals with locals. (RFB)
- desk/deskinf.c desk/desksupp.c desk/desktop.def desk/desktop.rsc:
  Allow folders to be renamed from the desktop. (RFB)
- desk/deskbind.h desk/deskdir.c desk/deskfun.c desk/deskpro.c:
  Eliminate global variables D.g_srcpth, D.g_dstpth. (RFB)

2013-03-15
- desk/deskinf.c desk/deskinf.h desk/desksupp.c desk/desktop.def
  desk/desktop.rsc: Combine file and folder information dialogs. (RFB)

2013-03-16
- bios/kprint.c: Added CRLF translation in kprintf_outc_rs232(). (VRI)
- aes/gemsuper.c bios/chardev.c bios/ikbd.c include/config.h: Added new define
  CONF_SERIAL_CONSOLE to redirect console I/O to the serial port. (VRI)
- desk/deskdir.c desk/desktop.def desk/desktop.rsc: Combine copy and
  delete desktop dialogs. (RFB)

2013-03-17
- desk/deskdir.c desk/deskinf.c desk/deskmain.c desk/deskmain.h:
  Automatically centre desktop dialog titles. (RFB)
- desk/deskdir.c: Code cleanup: simplify fold_wind(). (RFB)
- bios/vt52.c: Removed unused vt52_initialized. (VRI)
- bios/bios.c bios/kprint.h: Check CHARDEV_AVAILABLE in BIOS character IO. (VRI)
- desk/deskapp.c desk/deskdir.c desk/deskdir.h: Refresh relevant open
  windows after saving EMUDESK.INF. (RFB)